--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,4 @@ Imports: car
 RoxygenNote: 6.1.0
 Suggests: knitr, rmarkdown, testthat
 VignetteBuilder: knitr
+URL: https://ferdinandcampos.github.io/analysisMultipartiteSBM/, https://github.com/ferdinandcampos/analysisMultipartiteSBM
