--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,8 @@ export(plotNetworkTripartiteSBM)
 export(rename_species)
 export(species_type_letter)
 export(variables_to_Latex)
+import(ggplot2)
+import(igraph)
+import(rlist)
+import(sbm)
+import(stringr)
